@@ -13,11 +13,20 @@ input {
 	border-width: expression(this.type=="radio"?'0px':this.type=="checkbox"?'0px':'1px'); 
 }
 
-div#toolbar-box {
+div.toolbar-box {
 	height: 65px;
 }
 
-#toolbar-box div.m {
+.toolbar-box div.m {
 	height: 50px;
+}
+
+div.toolbar-list span {
+	margin: 0px;
+	position: relative;
+}
+
+div.toolbar-list a {
+	position: relative;
 }
 
